# usd2gltf

./: README.md  setup.cfg
src/usd2gltf/: cli.py
src/usd2gltf/converters/: usd_mesh.py  usd_skel.py
