[metadata]
name = usd2gltf
version = 0.3.5
author = Mike Lyndon
author_email = work.mike@pm.me
description = Convert USD to GLTF
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikelyndon/usd2gltf
classifiers = 
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
  usd-core
  gltflib
  numpy
# usd-core on PyPI ships wheels for 3.8–3.13 only (see pypi.org/project/usd-core).
python_requires = >=3.9,<3.14

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
  usd2gltf = usd2gltf.cli:main
